--- a/2a.html
+++ b/2a.html
@@ -96,9 +96,41 @@
     font-weight: 620;
     border-radius: 18px;
     cursor: pointer;
+    margin-right: 8px;
+    margin-bottom: 30px;
   }
 
+a {
+  color: rgb(71, 117, 167);
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 18px;
+  margin-bottom: 20px;
+}
 
+.amazon {
+  background-color: rgba(236, 206, 37, 0.918);
+  color: black;
+  border: none;
+  height: 48px;
+  width: 190px;
+  font: roboto thin;
+  font-size: 23px;
+  border-radius: 28px;
+  cursor: pointer;
+  margin-right: 15px;
+}
+
+.buy {
+  background-color: rgba(222, 146, 15, 0.918);
+  color: black;
+  border: none;
+  height: 48px;
+  width: 190px;
+  font: roboto thin;
+  font-size: 23px;
+  border-radius: 28px;
+  cursor: pointer;
+}
 </style>
 <button class="request-now">
   Request now
@@ -126,4 +158,20 @@
 
 <button class="save">
   Save
+</button>
+
+<a href="https://www.amazon.com/"><h2>Back to Amazon</h2></a>
+
+<h1 style="font-size: 45px;">Nike Black Running Shoes</h1>
+
+<h3 style="color:green; font-size: 28px;">$39 - in stock.</h3>
+
+<h3 style="font-weight: 100; font-size: 27px;">Free delivery tomorrow</h3>
+
+<button class="amazon">
+  Add to Cart
+</button>
+
+<button class="buy">
+  Buy now
 </button>
