--- a/buttons.html
+++ b/buttons.html
@@ -8,23 +8,42 @@
     border-radius: 2px;
     cursor: pointer;
     margin-right: 8px;
+    transition: opacity 0.15s;
+  }
+
+  .subscribe-button:hover {
+    opacity: 0.8;
+  }
+
+  .subscribe-button:active {
+    opacity: 0.5;
   }
 
   .join-button {
     background-color: white;
-    border-color: rgb(54, 127, 201);
+    border-color: rgb(33, 74, 187);
     border-style: solid;
     border-width: 1px;
-    color: rgb(54, 127, 201);
+    color: rgb(33, 74, 187);
     height: 36px;
     width: 62px;
     font-weight: 500;
     border-radius: 2px;
     cursor: pointer;
+    transition: background-color 0.15s, color 0.15s;
   }
 
+.join-button:hover {
+  background-color: rgb(33, 74, 187);
+  color: white;
+}
+
+.join-button:active {
+  opacity: 0.7;
+}
+
   .tweet-button {
-    background-color: rgb(68, 126, 220);
+    background-color: rgb(35, 117, 247);
     color: white;
     border: none;
     height: 36px;
@@ -34,7 +53,13 @@
     font-size: 15px;
     cursor: pointer;
     margin-left: 8px;
+    transition: box-shadow 0.15s;
   }
+  
+  .tweet-button:hover {
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.15);
+  }
+
 </style>
 
 <button class="subscribe-button">
